[package]
name = "tau"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/debatecore/tau"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.5.2", features = ["cors"] }
strum = { version = "0.26.3", features = ["derive"]}
url = "2.5.2"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid"] }
dotenvy = "0.15.7"
uuid = { version = "1.11.0", features = ["serde", "v7"] }
serde_json = "1.0.134"
serde-inline-default = "0.2.3"
