[package]
name = "tau"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/debatecore/tau"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.8", features = ["cors"] }

utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono", "url"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }

tokio = { version = "1.43.1", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.134"
serde-inline-default = "0.2.3"

uuid = { version = "1.11.0", features = ["serde", "v7"] }
chrono = { version = "0.4.39", features = ["serde"] }
url = { version = "2.5.2", features = ["serde"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

reqwest = { version = "0.13.2", features = ["cookies", "json"] }

tracing = "0.1.40"
tracing-subscriber = "0.3.20"
strum = { version = "0.26.3", features = ["derive"] }
dotenvy = "0.15.7"
thiserror = "2.0.9"
base64 = "0.22.1"
argon2 = "0.5.3"
rand = "0.8.5"
sha2 = "0.10.8"

testcontainers-modules = { version = "0.15", features = ["postgres"] }
serial_test = "3.3.1"
test-env-helpers = "0.2.2"